--- a/style.css
+++ b/style.css
@@ -43,9 +43,11 @@ body{
 }
 
 .imagemain{
+    background-image: url(./assets/testban);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     background-color: transparent;
     width: 100%;
     height: 294px;
@@ -78,7 +80,8 @@ body{
     display: inline-block;
     height: 0px;
     width: 0px;
-    align-self: flex-end;
+    justify-self: flex-end;
+    align-self: flex-start;
     background-color: #212121;
     border-radius: 20px;
     margin-right: 10px;
@@ -122,8 +125,7 @@ body{
 }
 
 #splash{
-    flex: 1 0 1;
-    justify-self: flex-start;
+    flex: 100 0 100;
     align-self: center;
     display: inline-block;
     margin: none;
