--- a/style.css
+++ b/style.css
@@ -37,13 +37,13 @@ body{
     align-self: center;
     font-family: 'Quicksand', sans-serif;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 16px;
     color: #707070;
     text-decoration: none;
 }
 
 .imagemain{
-    background-image: url(./assets/testban);
+    background-image: url(./assets/bubbleban.png);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -65,7 +65,7 @@ body{
 .logbtn, .regbtn{
     font-family: 'Quicksand', sans-serif;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 16px;
     color: #606060;
     background: none;
     box-shadow: none;
@@ -133,16 +133,48 @@ body{
     padding: none;
 }
 
+.minfo{
+    background: #212121;
+    height: 600px;
+}
+
+.minfo .label{
+    color: #1b1b1b;
+}
+
+.infocards{
+    display: flex;
+    justify-content: space-around;
+}
+
+.waveform{
+    display: flex;
+    background-color: #212121;
+    background-image: url(./assets/svgtext.png);
+    background-repeat: no-repeat;
+    height: auto;
+}
+
+.rand{
+    flex-grow: 1;
+}
+
+.brick{
+    background-color: #212121;
+    height: 100%;
+}
+
 .cont{
     /*Flex properties*/
     display: flex;
     flex-direction: column;
+    background-color: #1b1b1b;
 }
 
 .label{
     font-family: 'Quicksand', sans-serif;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 35px;
     color: white;
     align-self: center;
 }
