--- a/style.css
+++ b/style.css
@@ -1,16 +1,37 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 
+html::-webkit-scrollbar{
+    width: 1vw;
+}
+
+html::-webkit-scrollbar-track{
+    background-color: #212121;
+}
+
+html::-webkit-scrollbar-thumb{
+    background-color: #303030;
+    border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:hover{
+    background-color: #353535;
+    cursor: grab;
+}
+
+
+
 *{
     margin: 0;
 }
 
 body{
-    background: #1B1B1B;
+    background: #212121;
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow-x: hidden;
+    scrollbar-width: thin;
 }
 
 .uni{
@@ -147,28 +168,62 @@ body{
     justify-content: space-around;
 }
 
+.card{
+    flex: 0 10 auto;
+    align-content: center;
+    height: 450px;
+    background-color: #1B1B1B;
+    width: 300px;
+    background-image: url(./assets/bubblelarge.png);
+    border-radius: 25px;
+    border: 3px solid #303030;
+    margin: 10px;
+}
+
+.card .label{
+    color: white;
+    align-self: center;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 90px;
+}
+
+#cardfirst{
+    margin-left: 100px;
+}
+
+#cardthird{
+    margin-right: 100px;
+}
+
+.info{
+    font-family: 'Quicksand', sans-serif;
+    font-weight: bold;
+    font-size: 17px;
+    color: rgb(200, 200, 200);
+    align-self: center;
+    text-align: center;
+    margin: 10px;
+    flex: 1 2 1;
+}
+
+
 .waveform{
     display: flex;
-    background-color: #212121;
+    background-color: #1b1b1b;
     background-image: url(./assets/svgtext.png);
     background-repeat: no-repeat;
     height: auto;
 }
 
-.rand{
+.path{
     flex-grow: 1;
-}
-
-.brick{
-    background-color: #212121;
-    height: 100%;
 }
 
 .cont{
     /*Flex properties*/
     display: flex;
     flex-direction: column;
-    background-color: #1b1b1b;
 }
 
 .label{
